--- a/14-Timeline.Rmd
+++ b/14-Timeline.Rmd
@@ -37,7 +37,7 @@ Additional timeline subtracks will be created on a per controller basis.
 
 Vibe also supports fader automation on timeline tracks.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Recorded", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FyNOEZfLp8MiQtJSklmZ3%2F14.1-TL-Recorded.webp?alt=media&token=7985f2a7-5a46-4d2e-b1c2-f55e3fd4059f")`
+`r create_image_tag("14.Timeline", "14.1-TL-Recorded")`
 
 Vibe automatically matches frame rates to the incoming source.
 
@@ -61,7 +61,7 @@ As long as more Timeline views are set on different clock sources, they can load
 
 If Timeline views are based on the same clock source, they will be synchronized and will load the same tracks and options.
 
-`r create_image_tag("14.Timeline", "14.1-TL-View", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FOh7gGt5br6lurFzsNdes%2F14.1-TL-View.webp?alt=media&token=d7eb125f-df73-4bc3-9126-0e860424f46a")`
+`r create_image_tag("14.Timeline", "14.1-TL-View")`
 
 The Timeline view shows all the active Timelines and allows to enable and disable them, or play in "solo" mode.
 
@@ -74,7 +74,7 @@ Timeline events may be recorded in "real time" and then edited afterwards.
 
 **Create a timeline track:**
 
-`r create_image_tag("14.Timeline", "14.1-Create-Timeline", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FoNmp9u7TitOInt5iiRuA%2F14.1-Create-Timeline.webp?alt=media&token=b5395505-25d3-43c0-bd94-cce6a48cf8eb")`
+`r create_image_tag("14.Timeline", "14.1-Create-Timeline")`
 
 1.  Open the Timeline View menu.
     
@@ -94,7 +94,7 @@ Timeline events may be recorded in "real time" and then edited afterwards.
     
 6.  Enable the red {Record} button or the {+ Record} button.
     
-`r create_image_tag("14.Timeline", "14.1-TL-Transport-Bar", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FGYHhuOgYXG6ubGBALCOi%2F14.1-TL-Transport-Bar.webp?alt=media&token=69968ead-6581-4b19-821a-3e6cd3992072")`
+`r create_image_tag("14.Timeline", "14.1-TL-Transport-Bar")`
 
   - {Record} overwrites the existing events. 
   
@@ -122,7 +122,7 @@ Switch from the Graphical to the Grid view and viceversa with the toggle button 
 
 In the grid view it is possible to see all events from all timelines or to filter events by timeline and see only its own events.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Grid-View", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FFgICJWgLaaX6zER5xarw%2F14.1-TL-Grid-View.webp?alt=media&token=f3f48320-4168-415b-b8b7-51364667e4fd")`
+`r create_image_tag("14.Timeline", "14.1-TL-Grid-View")`
 
 ### Commands
 
@@ -136,9 +136,9 @@ These commands will affect the selected timelines in the sequence. Some sequence
 
 3. The Editor Toolbar shows the available commands:
 
-`r create_image_tag("14.Timeline", "14.1-TL-Num-Toolbar", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FK81XHaBtDHoweY0dr0ha%2F14.1-TL%23-Toolbar.webp?alt=media&token=98266616-4265-455e-ae8f-27b14ad120c5")`
+`r create_image_tag("14.Timeline", "14.1-TL-Num-Toolbar")`
 
-`r create_image_tag("14.Timeline", "14.1-TL-Commands", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FqrhzxvT6qCnsbkgnIlFZ%2F14.1-TL-Commands.webp?alt=media&token=f5e4caba-b4ea-4c3c-afd6-6c6ad4934ba4")`
+`r create_image_tag("14.Timeline", "14.1-TL-Commands")`
 
 4. Sequence may also end with:
 
@@ -164,7 +164,7 @@ These commands will affect the selected timelines in the sequence. Some sequence
 
 To trigger Timeline commands via the panel and Editor Toolbar there is an "Active Timeline View" indicator:
 
-`r create_image_tag("14.Timeline", "14.1-TL-Menu-Active", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FooORahO1pS6AfEhuTM4N%2F14.1-TL-Menu-Active.webp?alt=media&token=d6f12de1-9913-47e5-afe8-1cc6d37df1f9")`
+`r create_image_tag("14.Timeline", "14.1-TL-Menu-Active")`
 
 If there are more than 1 Timeline Views on the layout, only 1 of them can be the "Active" one.
 
@@ -182,9 +182,9 @@ These commands will affect the Active Timeline View.
 
 3. You see on the Editor Toolbar the available commands:
 
-`r create_image_tag("14.Timeline", "14.1-TL-Toolbar", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FTkMpw8g30Tv9mF8IqxRU%2F14.1-TL-Toolbar.webp?alt=media&token=a8c3ff09-6899-4d4d-9a64-31da6908fe93")`
+`r create_image_tag("14.Timeline", "14.1-TL-Toolbar")`
 
-`r create_image_tag("14.Timeline", "14.1-TL-Options", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FIW9PDydVEqT1xPV762gX%2F14.1-TL-Options.webp?alt=media&token=ba20f806-44a5-4f5f-9336-44e66361f273")`
+`r create_image_tag("14.Timeline", "14.1-TL-Options")`
 
 ### Gestures
 
@@ -214,7 +214,7 @@ Use the following **gestures** on the timeline view to manage the events:
 
 To aid in timeline navigation, Markers may be inserted.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Menu-Markers", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FggiIzrGJjJMxB3Fbdsza%2F14.1-TL-Menu-Markers.webp?alt=media&token=62f8c69f-b460-4be9-b647-968161c40d0e")`
+`r create_image_tag("14.Timeline", "14.1-TL-Menu-Markers")`
 
 To insert a marker:
 
@@ -228,7 +228,7 @@ To insert a marker:
 
 In the Timeline view, markers can be moved by assigning a direct time, and they can be assigned a delta.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Markers", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FpJj4vHB3xXkARDK8pZdx%2F14.1-TL-Markers.webp?alt=media&token=40c53b8f-a748-4251-a9df-f90ee07b59cf")`
+`r create_image_tag("14.Timeline", "14.1-TL-Markers")`
 
 The Timeline Grid View shows the list of Markers on a dedicated tab, where they can be named. 
 Markers' names will appear also in the graphical view, on the bottom of the marker.
@@ -237,7 +237,7 @@ Markers' names will appear also in the graphical view, on the bottom of the mark
 
 The Move Selection submenu offers options to set move the selected events.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Menu-Move-Selection", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2F5NzYriXZGQ5lQFov0s0m%2F14.1-TL-Menu-Move-Selection.webp?alt=media&token=6e3f6889-4946-458d-aae1-87fd10bdaf64")`
+`r create_image_tag("14.Timeline", "14.1-TL-Menu-Move-Selection")`
 
 It is possible to change selected event times via the physical wheels.
 
@@ -245,7 +245,7 @@ There are 2 new buttons to assign the delta time for the selected events to the 
 
 There are 2 physical wheels that are available for use:
 
-`r create_image_tag("14.Timeline", "14.1-TL-Encoders", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FucIYRJuwszY9q3vzIVvX%2F14.1-TL-Encoders.webp?alt=media&token=9f852a86-a315-47df-a33f-df86c046278b")`
+`r create_image_tag("14.Timeline", "14.1-TL-Encoders")`
 
 The left one is for moving the selected events.
 
@@ -255,13 +255,13 @@ The right one is to change the time resolution for the current time movement.
 
 The Actions submenu offers options to manage the selected events.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Menu-Actions", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FVaRfzYUgas3u9aqWSNrI%2F14.1-TL-Menu-Actions.webp?alt=media&token=a27019f0-9f02-4c76-887a-16a9a938e9a8")`
+`r create_image_tag("14.Timeline", "14.1-TL-Menu-Actions")`
 
 All the events can be moved on the timeline with drag&drop commands in the graphical view, or by assigning a different time in the grid bar.
 
 The Actions menu allows to enable or disable the selected events, to delete them from the timeline, or to hide the disabled events from the view.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Actions", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2Fuc6wVYJVfy0govj8h7t9%2F14.1-TL-Actions.webp?alt=media&token=345e65d9-2208-4d36-a515-d2c7207292b7")`
+`r create_image_tag("14.Timeline", "14.1-TL-Actions")`
 
 In the Actions menu there is the option to **Reset Slider Value** from a playback and set it to a fixed value between zero and full.
 
@@ -281,7 +281,7 @@ To clear the slider value from a timeline:
 
 It is possible to view the timeline and events data in different time formats.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Menu-Timestamp", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2F420TffgJLrwJeoJCoOWM%2F14.1-TL-Menu-Timestamp.webp?alt=media&token=99428212-3196-47b1-81a9-450b1c32f7fe")`
+`r create_image_tag("14.Timeline", "14.1-TL-Menu-Timestamp")`
 
 The default time format is milliseconds, but it is also possible to use FPS format. 
 
@@ -291,7 +291,7 @@ The time format selection can be set on the Timestamp View sub-menu.
 
 Timelines can load Audio Tracks in common file formats such as .mp3 and .wav.
 
-`r create_image_tag("14.Timeline", "14.1-TL-Audiotrack", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2F513QLPh853sZ8nuDuBoz%2F14.1-TL-Audiotrack.webp?alt=media&token=46ff16b6-b731-4596-8edb-b4520d162b36")`
+`r create_image_tag("14.Timeline", "14.1-TL-Audiotrack")`
 
 To add an audio track to a timeline:
 
@@ -337,7 +337,7 @@ Open the I/O Settings popup from the Vibe menu or with the {I/O Settings} button
 
 The SMPTE Tab contains the toggle button to enable or disable the LTC input.
 
-`r create_image_tag("14.Timeline", "14.2-IO-Settings-SMPTE", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2Fg4bDJOgnX88CaU1CqrnZ%2F14.2-IO-Settings-SMPTE.webp?alt=media&token=2cadb1ad-2382-4443-89cc-1c5d971dfb75")`
+`r create_image_tag("14.Timeline", "14.2-IO-Settings-SMPTE")`
 
 <span style="color:Gray">Currently Vibe is only capable of receiving LTC inputs, but will be able to send SMPTE output in future releases.</span>
 
@@ -355,7 +355,7 @@ Open the I/O Settings popup from the Vibe menu or with the {I/O Settings} button
 
 The MIDI Tab contains the toggle button to enable or disable the MTC input.
 
-`r create_image_tag("14.Timeline", "14.2-IO-Settings-MTC", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2FC7IvLw0Gqs94XcmfKDVa%2F14.2-IO-Settings-MTC.webp?alt=media&token=75cc712a-9336-4d0e-bef4-57683b1502c2")`
+`r create_image_tag("14.Timeline", "14.2-IO-Settings-MTC")`
 
 <span style="color:Gray">Currently Vibe is only capable of receiving MTC inputs, but will be able to send MTC output in future releases.</span>
 
@@ -447,7 +447,7 @@ In Notes/Commands Tab it is possible to assign specific commands to the Midi not
     
 The MIDI grid is used to select any of the 127 values available for the MIDI message types selected with the tabs.
 
-`r create_image_tag("14.Timeline", "14.3-IO-Settings-MIDI-Notes", "https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2Fco6zHjxX7ZVRiO0Ze921%2Fuploads%2F0qfxuNCNVAbnJvsQuIf3%2F14.3-IO-Settings-MIDI-Notes.webp?alt=media&token=dec7af76-bb68-46d8-b305-5eadbf31491c")`
+`r create_image_tag("14.Timeline", "14.3-IO-Settings-MIDI-Notes")`
 
 **Assign MIDI Notes to Controllers:**
 
